--- a/balrog/agents/braid/monitor/templates/partials/stats.html
+++ b/balrog/agents/braid/monitor/templates/partials/stats.html
@@ -8,6 +8,8 @@
   <dd>{{ "{:,}".format(stats.total_in_tokens) }} in / {{ "{:,}".format(stats.total_out_tokens) }} out</dd>
   <dt>Avg Latency</dt>
   <dd>{{ "{:.1f}".format(stats.avg_latency_ms / 1000) }}s</dd>
+  <dt>Actions</dt>
+  <dd>{{ stats.single_actions }}s + {{ stats.multi_actions }}m + {{ stats.queued_actions }}q</dd>
 </dl>
 {% else %}
 <p class="muted">No stats available</p>
