--- a/balrog/agents/braid/monitor/templates/partials/stats.html
+++ b/balrog/agents/braid/monitor/templates/partials/stats.html
@@ -10,6 +10,8 @@
   <dd>{{ "{:.1f}".format(stats.avg_latency_ms / 1000) }}s</dd>
   <dt>Actions</dt>
   <dd>{{ stats.single_actions }}s + {{ stats.multi_actions }}m + {{ stats.queued_actions }}q</dd>
+  <dt>Memory</dt>
+  <dd>+{{ stats.episode_mem_adds }}/-{{ stats.episode_mem_removes }}e, +{{ stats.persistent_mem_adds }}/-{{ stats.persistent_mem_removes }}p</dd>
 </dl>
 {% else %}
 <p class="muted">No stats available</p>
