--- a/balrog/agents/braid/monitor/templates/partials/all.html
+++ b/balrog/agents/braid/monitor/templates/partials/all.html
@@ -100,6 +100,8 @@
           <dl>
             <dt>Episode</dt>
             <dd>{{ stats.episode }}</dd>
+            <dt>Model</dt>
+            <dd>{{ stats.model_id or '-' }}</dd>
             <dt>Step</dt>
             <dd>{{ stats.step }}</dd>
             <dt>Tokens In</dt>
