Track LLM calls explicitly for monitoring

--- a/balrog/agents/braid/monitor/templates/partials/all.html
+++ b/balrog/agents/braid/monitor/templates/partials/all.html
@@ -104,6 +104,8 @@
             <dd>{{ stats.model_id or '-' }}</dd>
             <dt>Step</dt>
             <dd>{{ stats.step }}</dd>
+            <dt>LLM Calls</dt>
+            <dd>{{ stats.llm_calls }}</dd>
             <dt>Tokens In</dt>
             <dd>{{ "{:,}".format(stats.total_in_tokens) }}</dd>
             <dt>Tokens Out</dt>
